# klamer.dev

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  config.toml
.github/workflows/: build_deploy.yml
blog_files_macro/: Cargo.toml
blog_files_macro/src/: lib.rs
content/: _index.md  post-1.md
content/projects/: _index.md
css/: base.css
klamer_dev/: Cargo.toml
klamer_dev/assests/: 404.html  home.html
klamer_dev/assets/: good_reads.html  home.html  models.html
klamer_dev/blog/: 001_First_post.html  001_first_post.html  002_The_second_post.html  002_jersey_numbers.html
klamer_dev/css/: base.css
klamer_dev/src/: html.rs  main.rs
rustls_acme_cache/: Cargo.toml
rustls_acme_cache/src/: lib.rs
src/: html.rs  main.rs
templates/: projects.html
themes/: update_theme.sh
themes/anatole-zola/templates/: basic.html
