[package]
name = "klamer_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["http2"] }
axum-htmx = "0.5.0"
tokio = { features = ["macros", "rt-multi-thread", "signal"], version = "1.35.1" }
tower = "0.4.13"
bytes = "1.5.0"
http-body-util = "0.1.0"
http-body = "1.0.0"
futures = "0.3.30"
derive_builder = "0.12.0"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
blog_files_macro = { path = "../blog_files_macro" }
lazy_static = "1.4.0"
rustls-acme = { version = "0.9.2", features = ["axum"] }
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.20"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
rustls_acme_cache = { path = "../rustls_acme_cache" }
tower_governor = "0.3.2"
