[package]
name = "rustls_acme_cache"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
async-trait = "0.1.77"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-lc-rs = { version = "1.6.2", default-features = false, features = ["aws-lc-sys"] }
aws-sdk-s3 = "1.17.0"
base64 = "0.22.0"
rustls-acme = { version = "0.9.2", features = ["axum"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
