[package]
name = "rustls_acme_cache"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
async-trait = "0.1.77"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.17.0"
base64 = "0.22.0"
rustls-acme = { version = "0.9.2", features = ["axum"] }
sha2 = "0.10.8"
tracing = "0.1.40"
